refactor AdditionalInterviewQuestions class to improve code clarity and efficiency